# quadwild

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  organize_folders_300_mechanical.command  organize_folders_300_organic.command  quad_from_pathes.cpp  quad_from_pathes.pro
commandline_pipeline/: libs.pri  quadrangulate_commandline.cpp  quadrangulate_commandline.pro
components/field_computation/: AutoRemesherMio.h  compute_field_300_mechanical.command  compute_field_300_organic.command  field_computation.pro  gl_utils.h  glwidget.cpp  glwidget.h  main.cpp  mesh_field_smoother.h  mesh_manager.h  poly_mesh_type.h  triangle_mesh_type.h
components/field_tracing/: basic_setup.txt  field_tracing  field_tracing.pro  glwidget.cpp  glwidget.h  main.cpp  moc_glwidget.cpp
components/quad_from_patches/: configuration.pri  field_smoother.h  load_save.cpp  load_save.h  local_para_smooth.h  main.cpp  mesh_types.h  quad_from_patches.cpp  quad_from_patches.h  quad_from_patches.pro  quad_mesh_tracer.cpp  quad_mesh_tracer.h  quadrangulatedataset.sh  smooth_mesh.h
components/results_processing/: libs.pri
components/viz_mesh_results/: configuration.pri  viz_mesh_result  viz_mesh_results.pro
field_computation/: AutoRemesher.h  basic_setup.txt  basic_setup_mechanical.txt  basic_setup_organic.txt  field_computation  field_computation.pro  gl_utils.h  glwidget.cpp  glwidget.h  libs.pri  main.cpp  mesh_field_smoother.h  mesh_manager.h  poly_mesh_type.h  triangle_mesh_type.h
field_computation/lib/: CoMISo_BUILD_LINUX.txt
field_computation/lib/CoMISo/Examples/quadratic_solver/: CMakeLists.txt
field_computation/lib/CoMISo/Examples/small_factored_example/: CMakeLists.txt
field_computation/lib/CoMISo/Examples/small_nleast_squares/: CMakeLists.txt
field_tracing/: basic_setup.txt  field_tracing.pro  glwidget.cpp  glwidget.h  libs.pri  main.cpp  mesh_drawing.h  mesh_type.h  trace_field_300_mechanical.command  trace_field_300_organic.command
field_tracing/tracing/: GL_metamesh.h  GL_vert_field_graph.h  candidate_path.h  catmull_clarkability.h  edge_direction_table.h  graph_query.h  metamesh.h  patch_manager.h  patch_subdivider.h  patch_tracer.h  tracer_interface.h  vert_field_graph.h  vertex_classifier.h  vertex_emitter.h
libs/: libs.pri
libs/CoMISo/: CMakeLists LIBIGL.txt  CMakeLists.txt
libs/libiglfields/: libiglfields.pri
libs/quadretopology/: quadretopology.pri
quad_from_patches/: basic_setup.txt  configuration.pri  libs.pri  load_save.cpp  load_save.h  local_para_smooth.h  main.cpp  mesh_types.h  quad_from_patches.cpp  quad_from_patches.h  quad_from_patches.pro  quad_mesh_tracer.cpp  quad_mesh_tracer.h  quadrangulate_300_mechanical.command  quadrangulate_300_organic.command  quadrangulate_loopy_cuts.command  quadrangulatedataset.sh  smooth_mesh.h  test_tri.obj.mtl
quad_from_patches/includes/: charts.cpp  charts.h  common.h  convert.cpp  convert.h  ilp.cpp  ilp.h  mapping.cpp  mapping.h  orient_faces.h  patterns.cpp  patterns.h  utils.cpp  utils.h
quad_from_patches/test_mesh/: mnf07HeadFem_rem_rem_p.corners  mnf07HeadFem_rem_rem_p.patch
quadwild/: basic_setup.txt  basic_setup_organic.txt  functions.cpp  functions.h  quadwild.cpp  quadwild.pro  quadwild_mechanical.command  quadwild_organic.command
results_processing/lazy_website/: index.php
results_processing/orientability_check/: main.cpp  mesh_def.h  orientability_check.pro
results_processing/polyMetrics/: main.cpp  polyMetrics.pro
results_processing/snapshotRenderer/: blenderBatchFolderRender.py  (+2 more)
scripts/: organize_folders_300_mechanical.command  organize_folders_300_organic.command
test_mesh/: joint_rem_p.corners  joint_rem_p.patch  joint_rem_p_quadrangulation.obj.mtl  mnf07HeadFem_rem_rem_p_quadrangulation.obj.mtl
viz_mesh_results/: main.cpp  mesh_types.h
(+491 files in other folders)
